s05_kubernetes_network/mta-service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: mta-service
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mta-service
subsets:
  - addresses:
      - ip: 199.201.110.204
    ports:
      - port: 443
